--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ pydantic==2.9.2
 openai>=1.40.0
 python-docx==1.1.2
 python-multipart==0.0.9
+openai
+python-dotenv
+sentence-transformers
+torch
+numpy 
